--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -7,17 +7,19 @@
     </head>
     <body>
     <h3>Welcome to the web calculator</h3>
-        <label for="no1">First number</label>
-        <input type="number" id="no1" name="no1" style="width: 50px"/>
-        <label for="operator">Operator</label>
-        <select name="operator" id="operator">
-            <option value="add">Add</option>
-            <option value="subtract">Subtract</option>
-            <option value="multiply">Multiply</option>
-            <option value="divide">Divide</option>
-        </select>
-        <label for="no2">Second number</label>
-        <input type="number" id="no2" name="no2" style="width: 50px"/>
-    <input type="submit" value="Submit">
+        <form>
+            <label for="no1">First number</label>
+            <input type="number" id="no1" name="no1" style="width: 50px"/>
+            <label for="operator">Operator</label>
+            <select name="operator" id="operator">
+                <option value="add">Add</option>
+                <option value="subtract">Subtract</option>
+                <option value="multiply">Multiply</option>
+                <option value="divide">Divide</option>
+            </select>
+            <label for="no2">Second number</label>
+            <input type="number" id="no2" name="no2" style="width: 50px"/>
+        <input type="submit" value="Submit" formmethod="post">
+        </form>
     </body>
 </html>
